--- a/style/style.css
+++ b/style/style.css
@@ -1,9 +1,113 @@
-#logo {
-    width: 50vw;
+@font-face {
+    font-family: Kalam;
+    src: url(../fonts/Kalam-Bold.ttf);
 }
-header {
-    background-color: #ebebffff;
+
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
 }
+/* background */
 #main-background {
-    background-color: #ebebffff;
+    background-color: #ebebff;
 }
+#back {
+    height: 100vh;
+    background-image: url("../img/tlo.gif");
+    background-size: 100vw auto;
+    background-position-x: center;
+    background-position-y: center;
+    background-repeat: no-repeat;
+    opacity: 0.15;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0px;
+    overflow: hidden;
+}
+#stamp {
+    width: 40vw;
+    bottom: 15vh;
+    position: -webkit-sticky;
+    position: sticky;
+    opacity: 0.3;
+    left: 50vw;
+    z-index: 0;
+}
+
+/* menu */
+header {
+    position: absolute;
+    z-index: 1;
+}
+#logo {
+    width: 65vw;
+    background-color: white;
+}
+nav dl{
+    width: 90vw;
+    height: 30vh;
+}
+header a {
+    text-decoration: none;
+    font-family: 'Kalam';
+    text-transform: uppercase;
+    font-size: bold;
+    color: #220055;
+    font-size: 6vw;
+}
+.dot {
+    width: 4vw;
+    height: 4vw;
+    border-radius: 4vw;
+    border: solid 1vw #220055;
+    background-color: #ffcc00;
+    display: inline-block;
+}
+.left span {
+    position: relative;
+    bottom: 0.5vh;
+    left: 3vw;
+}
+.right span {
+    position: relative;
+    bottom: 0.5vh;
+    right: 3vw;
+}
+#ul1 {
+    width: 30vw;
+    position: relative;
+    right: -55vw;
+    top: 7vh;
+}
+#ul2 {
+    width: 47vw;
+    position: relative;
+    left: 4vw;
+    top: 14vh;
+}
+#ul3 {
+    width: 30vw;
+    position: relative;
+    right: -65vw;
+    top: 15vh;
+}
+#ul4 {
+    width: 32vw;
+    position: relative;
+    left: 12vw;
+    top: 30vh;
+}
+#ul5 {
+    width: 35vw;
+    position: relative;
+    right: -61vw;
+    top: 30vh;
+}
+#ul6 {
+    width: 40vw;
+    position: relative;
+    right: -45vw;
+    top: 45vh;
+}
+
