--- a/style/style.css
+++ b/style/style.css
@@ -3,11 +3,12 @@
     src: url(../fonts/palanquin-bold.ttf);
 } */
 
-* {
+/* * {
     margin: 0;
     padding: 0;
     border: 0;
-}
+} */
+
 /* background */
 #main-background {
     background-color: #ebebff;
@@ -36,21 +37,78 @@
 
 /* menu */
 header {
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
+    width: 100%; 
+    /* background-color: rgb(252, 190, 190); */
 }
 #logo {
-    position: relative;
     width: 65%;
     background-color: white;
 }
 nav {
-    height: 75%;
-    margin-top: -1%;
     text-align: center;
 }
 #map {
+    max-width: 100%;
+    /* width: 100%; */
+
+}
+nav div{
+    width: 100%;
     height: 100%;
-    width: auto;
+    border: 2px solid red;
+}
+#aboutUs{
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    z-index: 1;
+    width: 30%;
+    height: 5%;
+}
+#news{
+    position: absolute;
+    top: 32.7%;
+    left: 1%;
+    z-index: 1;
+    width: 47%;
+    height: 5%;
+}
+#services{
+    position: absolute;
+    top: 38.5%;
+    left: 57%;
+    z-index: 1;
+    width: 30%;
+    height: 5%;
+}
+#gallery{
+    position: absolute;
+    top: 57%;
+    left: 12%;
+    z-index: 1;
+    width: 33%;
+    height: 5%;
+}
+#career{
+    position: absolute;
+    top: 62.5%;
+    left: 67%;
+    z-index: 1;
+    width: 32%;
+    height: 5%;
+}
+#contact{
+    position: absolute;
+    top: 83.5%;
+    left: 50%;
+    z-index: 1;
+    width: 37%;
+    height: 5%;
+}
+
+/* mainContent */
+main {
+    /* background-color: rgb(247, 247, 154); */
+    width: 100%;
+    height: 100%;
 }
