--- a/style/style.css
+++ b/style/style.css
@@ -37,78 +37,113 @@
 
 /* menu */
 header {
-    width: 100%; 
+    max-height: 100%;
     /* background-color: rgb(252, 190, 190); */
 }
+#divLogo{
+    position: relative;
+    background-color: white;
+    width: 75%;
+    left: -10%;
+    
+}
 #logo {
-    width: 65%;
+    position: relative;
+    width: 50%;
+    left: 10%;
     background-color: white;
 }
 nav {
+    position: relative;
     text-align: center;
+    /* left: 5%; */
+    /* border: 2px solid green; */
 }
-#map {
+#map{
+    position: relative;
     max-width: 100%;
-    /* width: 100%; */
-
+    /* background-color: rgb(148, 143, 143); */
 }
-nav div{
+#links{
+    position: absolute;
+    opacity: 0.7;
+    top: 0;
+    /* background-color: rgb(178, 178, 238); */
     width: 100%;
     height: 100%;
-    border: 2px solid red;
+    z-index: 1;
 }
 #aboutUs{
     position: absolute;
-    top: 20%;
-    left: 50%;
-    z-index: 1;
+    top: 7.2%;
+    left: 50%; 
     width: 30%;
     height: 5%;
 }
 #news{
     position: absolute;
-    top: 32.7%;
-    left: 1%;
-    z-index: 1;
-    width: 47%;
+    top: 22%;
+    left: -1.5%;
+    width: 49%;
     height: 5%;
 }
 #services{
     position: absolute;
-    top: 38.5%;
-    left: 57%;
-    z-index: 1;
+    top: 28.7%;
+    left: 58%;
     width: 30%;
     height: 5%;
 }
 #gallery{
     position: absolute;
-    top: 57%;
-    left: 12%;
-    z-index: 1;
-    width: 33%;
+    top: 50.2%;
+    left: 10.5%;
+    width: 34%;
     height: 5%;
 }
 #career{
     position: absolute;
-    top: 62.5%;
-    left: 67%;
-    z-index: 1;
+    top: 56.7%;
+    left: 69.5%;
     width: 32%;
     height: 5%;
 }
 #contact{
     position: absolute;
-    top: 83.5%;
-    left: 50%;
-    z-index: 1;
+    top: 81.4%;
+    left: 50.5%;
     width: 37%;
     height: 5%;
+}
+.aInside{
+    width: 100%;
+    height: 100%;
+    /* border: 2px solid red; */
 }
 
 /* mainContent */
 main {
-    /* background-color: rgb(247, 247, 154); */
+    background-color: rgb(247, 247, 154);
     width: 100%;
-    height: 100%;
+    
+}
+
+@media (min-width: 576px) and (max-width: 767px) and (orientation: landscape){
+    header {
+        position: fixed;
+        width: 30%;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px){
+    header {
+        position: fixed;
+        width: 23%;
+    }
+}
+@media (min-width: 992px){
+    header {
+        position: fixed;
+        width: 23%;
+    }
 }
