Added JS validation form

--- a/style/style.css
+++ b/style/style.css
@@ -394,3 +394,9 @@ p{
     }
     /* text carousel end */
 /* service end */
+
+/* confirm */
+    .validationAlert{
+        display: none;
+    }
+/* confirm end */
